--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -36,8 +36,8 @@ Bdma.LPUART1_TX.0.SyncSignalID=NONE
 Bdma.Request0=LPUART1_TX
 Bdma.Request1=LPUART1_RX
 Bdma.RequestsNb=2
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_PRIV_RW
 CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_PRIV_RO
@@ -185,7 +185,68 @@ JPEG.USE_JPEG_ENCODER=0
 KeepUserPlacement=false
 LPUART1.BaudRate=40000000
 LPUART1.IPParameters=BaudRate
-MMTAppRegionsCount=0
+MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
+MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg1.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg1.MEMORYMAP.Name=DTCMRAM
+MMTAppReg1.MEMORYMAP.Size=131072
+MMTAppReg1.MEMORYMAP.StartAddress=0x20000000
+MMTAppReg2.MEMORYMAP.AppRegionName=RAM
+MMTAppReg2.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg2.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg2.MEMORYMAP.DefaultDataRegion=true
+MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion
+MMTAppReg2.MEMORYMAP.Name=RAM
+MMTAppReg2.MEMORYMAP.Size=524288
+MMTAppReg2.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg3.MEMORYMAP.AppRegionName=RAM_D2
+MMTAppReg3.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg3.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg3.MEMORYMAP.Name=RAM_D2
+MMTAppReg3.MEMORYMAP.Size=294912
+MMTAppReg3.MEMORYMAP.StartAddress=0x30000000
+MMTAppReg4.MEMORYMAP.AppRegionName=RAM_D3
+MMTAppReg4.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg4.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg4.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg4.MEMORYMAP.Name=RAM_D3
+MMTAppReg4.MEMORYMAP.Size=65536
+MMTAppReg4.MEMORYMAP.StartAddress=0x38000000
+MMTAppReg5.MEMORYMAP.AppRegionName=ITCMRAM
+MMTAppReg5.MEMORYMAP.Cacheability=WTRA
+MMTAppReg5.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg5.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg5.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg5.MEMORYMAP.Name=ITCMRAM
+MMTAppReg5.MEMORYMAP.Size=65536
+MMTAppReg5.MEMORYMAP.StartAddress=0x00000000
+MMTAppReg6.MEMORYMAP.AP=RO_priv_only
+MMTAppReg6.MEMORYMAP.AppRegionName=FLASH
+MMTAppReg6.MEMORYMAP.Cacheability=WTRA
+MMTAppReg6.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg6.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg6.MEMORYMAP.DefaultCodeRegion=true
+MMTAppReg6.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion
+MMTAppReg6.MEMORYMAP.ISRRegion=true
+MMTAppReg6.MEMORYMAP.MemType=ROM
+MMTAppReg6.MEMORYMAP.Name=FLASH
+MMTAppReg6.MEMORYMAP.RootBootRegion=true
+MMTAppReg6.MEMORYMAP.Size=131072
+MMTAppReg6.MEMORYMAP.StartAddress=0x08000000
+MMTAppReg7.MEMORYMAP.AP=RO_all
+MMTAppReg7.MEMORYMAP.AppRegionName=QSPI-FLASH
+MMTAppReg7.MEMORYMAP.Cacheability=WBRAWA
+MMTAppReg7.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg7.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg7.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,SizeUnit,MemSource,ContextName,Name,Cacheability,AP
+MMTAppReg7.MEMORYMAP.MemSource=EXT
+MMTAppReg7.MEMORYMAP.Name=QSPI-FLASH
+MMTAppReg7.MEMORYMAP.Size=8388608
+MMTAppReg7.MEMORYMAP.SizeUnit=MB
+MMTAppReg7.MEMORYMAP.StartAddress=0x90000000
+MMTAppRegionsCount=7
 MMTConfigApplied=false
 Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
@@ -244,18 +305,19 @@ Mcu.Pin34=PB4 (NJTRST)
 Mcu.Pin35=PB5
 Mcu.Pin36=VP_FATFS_VS_SDIO
 Mcu.Pin37=VP_JPEG_VS_JPEG
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin38=VP_RCC_USB
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PH0-OSC_IN (PH0)
-Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
-Mcu.Pin41=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin42=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
+Mcu.Pin40=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin41=VP_USB_DEVICE_VS_USB_DEVICE_DFU_FS
+Mcu.Pin42=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin43=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
 Mcu.Pin5=PH1-OSC_OUT (PH1)
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PB2
 Mcu.Pin9=PB10
-Mcu.PinsNb=43
+Mcu.PinsNb=44
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -514,7 +576,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H750VBTx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.12.1
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
@@ -715,11 +777,13 @@ TIM6.Period=999
 TIM6.Prescaler=9
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USB_DEVICE.CLASS_NAME_FS=DFU
-USB_DEVICE.IPParameters=VirtualMode-DFU_FS,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL-DFU_FS,USBD_SELF_POWERED-DFU_FS,VID-DFU_FS,MANUFACTURER_STRING-DFU_FS,PID_DFU_FS,PRODUCT_STRING_DFU_FS
+USB_DEVICE.IPParameters=VirtualMode-DFU_FS,VirtualModeFS,CLASS_NAME_FS,USBD_DEBUG_LEVEL-DFU_FS,USBD_SELF_POWERED-DFU_FS,VID-DFU_FS,MANUFACTURER_STRING-DFU_FS,PID_DFU_FS,PRODUCT_STRING_DFU_FS,USBD_DFU_APP_DEFAULT_ADD-DFU_FS,USBD_DFU_MEDIA-DFU_FS
 USB_DEVICE.MANUFACTURER_STRING-DFU_FS=0xAA55
 USB_DEVICE.PID_DFU_FS=2
 USB_DEVICE.PRODUCT_STRING_DFU_FS=A5-Mini-TV-DFU
 USB_DEVICE.USBD_DEBUG_LEVEL-DFU_FS=2
+USB_DEVICE.USBD_DFU_APP_DEFAULT_ADD-DFU_FS=0x90000000
+USB_DEVICE.USBD_DFU_MEDIA-DFU_FS=@QSPI Flash   /0x90000000/64*128Kg
 USB_DEVICE.USBD_SELF_POWERED-DFU_FS=0
 USB_DEVICE.VID-DFU_FS=0xAA55
 USB_DEVICE.VirtualMode-DFU_FS=Dfu
@@ -733,6 +797,8 @@ VP_JPEG_VS_JPEG.Mode=JPEG_Activate
 VP_JPEG_VS_JPEG.Signal=JPEG_VS_JPEG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_RCC_USB.Mode=USB_FS
+VP_RCC_USB.Signal=RCC_USB
 VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0.Mode=BoardOoPartJjDISPLAY
 VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0.Signal=STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0.0
 VP_SYS_VS_Systick.Mode=SysTick
