设置 `ITCM` 和 `DTCM` 不走擦车。设置 `RAM_BACKUP`。设置所有 FLASH 区域的缓存策略都是 `write-through` + `read-alloc`，关闭 `Bufferable`。因为其实 FLASH 不可写，如果要写，那就赶紧写，以便于触发 `HardFault`。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -75,12 +75,12 @@ CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region8_Settings_S=__NULL
 CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region9_Settings_S=__NULL
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control,default_mode_Activation,BaseAddress_Spec,Size_Spec,SubRegionDisable_Spec,AccessPermission_Spec,IsShareable_Spec,IsCacheable_Spec,IsBufferable_Spec,TypeExtField_Spec,DisableExec_Spec,Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region6_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region6_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region6_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region6_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region6_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region7_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region7_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region7_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region7_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region7_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region7_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region7_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region8_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region9_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region6_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region6_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region6_Settings_S
 CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_BUFFERABLE
-CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_ACCESS_BUFFERABLE
+CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_ACCESS_NOT_BUFFERABLE
 CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_ACCESS_BUFFERABLE
 CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_ACCESS_BUFFERABLE
 CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_ACCESS_BUFFERABLE
 CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region6_Settings_S=MPU_ACCESS_BUFFERABLE
-CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region7_Settings_S=MPU_ACCESS_BUFFERABLE
+CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region7_Settings_S=MPU_ACCESS_NOT_BUFFERABLE
 CORTEX_M7.IsBufferable_Spec=MPU_ACCESS_NOT_BUFFERABLE
 CORTEX_M7.IsCacheable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_ACCESS_NOT_CACHEABLE
 CORTEX_M7.IsCacheable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_ACCESS_CACHEABLE
@@ -102,12 +102,12 @@ CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region7_Settings_S=MPU_REGION_SIZ
 CORTEX_M7.Size_Spec=MPU_REGION_SIZE_4GB
 CORTEX_M7.SubRegionDisable_Spec=0x0
 CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_TEX_LEVEL0
-CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_TEX_LEVEL1
+CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_TEX_LEVEL2
 CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_TEX_LEVEL0
 CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_TEX_LEVEL1
 CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_TEX_LEVEL1
 CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region6_Settings_S=MPU_TEX_LEVEL1
-CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region7_Settings_S=MPU_TEX_LEVEL1
+CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region7_Settings_S=MPU_TEX_LEVEL2
 CORTEX_M7.TypeExtField_Spec=MPU_TEX_LEVEL0
 CORTEX_M7.default_mode_Activation=1
 DAC1.DAC1_OutputBuffer-DAC_OUT1=DAC_OUTPUTBUFFER_DISABLE
@@ -186,27 +186,31 @@ KeepUserPlacement=false
 LPUART1.BaudRate=40000000
 LPUART1.IPParameters=BaudRate
 MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
+MMTAppReg1.MEMORYMAP.Cacheability=NonCacheable
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg1.MEMORYMAP.CoreName=ARM Cortex-M7
-MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability,XN
 MMTAppReg1.MEMORYMAP.Name=DTCMRAM
 MMTAppReg1.MEMORYMAP.Size=131072
 MMTAppReg1.MEMORYMAP.StartAddress=0x20000000
+MMTAppReg1.MEMORYMAP.XN=NotPermitted
 MMTAppReg2.MEMORYMAP.AppRegionName=RAM
 MMTAppReg2.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg2.MEMORYMAP.CoreName=ARM Cortex-M7
 MMTAppReg2.MEMORYMAP.DefaultDataRegion=true
-MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion
+MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion,XN
 MMTAppReg2.MEMORYMAP.Name=RAM
 MMTAppReg2.MEMORYMAP.Size=524288
 MMTAppReg2.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg2.MEMORYMAP.XN=NotPermitted
 MMTAppReg3.MEMORYMAP.AppRegionName=RAM_D2
 MMTAppReg3.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg3.MEMORYMAP.CoreName=ARM Cortex-M7
-MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,XN
 MMTAppReg3.MEMORYMAP.Name=RAM_D2
 MMTAppReg3.MEMORYMAP.Size=294912
 MMTAppReg3.MEMORYMAP.StartAddress=0x30000000
+MMTAppReg3.MEMORYMAP.XN=NotPermitted
 MMTAppReg4.MEMORYMAP.AppRegionName=RAM_D3
 MMTAppReg4.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg4.MEMORYMAP.CoreName=ARM Cortex-M7
@@ -215,7 +219,7 @@ MMTAppReg4.MEMORYMAP.Name=RAM_D3
 MMTAppReg4.MEMORYMAP.Size=65536
 MMTAppReg4.MEMORYMAP.StartAddress=0x38000000
 MMTAppReg5.MEMORYMAP.AppRegionName=ITCMRAM
-MMTAppReg5.MEMORYMAP.Cacheability=WTRA
+MMTAppReg5.MEMORYMAP.Cacheability=NonCacheable
 MMTAppReg5.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg5.MEMORYMAP.CoreName=ARM Cortex-M7
 MMTAppReg5.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
@@ -237,7 +241,7 @@ MMTAppReg6.MEMORYMAP.Size=131072
 MMTAppReg6.MEMORYMAP.StartAddress=0x08000000
 MMTAppReg7.MEMORYMAP.AP=RO_all
 MMTAppReg7.MEMORYMAP.AppRegionName=QSPI-FLASH
-MMTAppReg7.MEMORYMAP.Cacheability=WBRAWA
+MMTAppReg7.MEMORYMAP.Cacheability=WTRA
 MMTAppReg7.MEMORYMAP.ContextName=Cortex-M7NS
 MMTAppReg7.MEMORYMAP.CoreName=ARM Cortex-M7
 MMTAppReg7.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,SizeUnit,MemSource,ContextName,Name,Cacheability,AP
@@ -246,7 +250,15 @@ MMTAppReg7.MEMORYMAP.Name=QSPI-FLASH
 MMTAppReg7.MEMORYMAP.Size=8388608
 MMTAppReg7.MEMORYMAP.SizeUnit=MB
 MMTAppReg7.MEMORYMAP.StartAddress=0x90000000
-MMTAppRegionsCount=7
+MMTAppReg8.MEMORYMAP.AppRegionName=RAM_BACKUP
+MMTAppReg8.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg8.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg8.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,XN
+MMTAppReg8.MEMORYMAP.Name=RAM_BACKUP
+MMTAppReg8.MEMORYMAP.Size=4096
+MMTAppReg8.MEMORYMAP.StartAddress=0x38800000
+MMTAppReg8.MEMORYMAP.XN=NotPermitted
+MMTAppRegionsCount=8
 MMTConfigApplied=false
 Mcu.CPN=STM32H750VBT6
 Mcu.Family=STM32H7
