之前整错了，SPI2 怼的是 W25Q64 FLASH，结果我把它接到 ILI9341 驱动上了。重新给 SPI1 配置 DMA，让 ILI9341 驱动使用 SPI1。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -155,7 +155,45 @@ Dma.DAC1_CH2.1.SyncRequestNumber=1
 Dma.DAC1_CH2.1.SyncSignalID=NONE
 Dma.Request0=DAC1_CH1
 Dma.Request1=DAC1_CH2
-Dma.RequestsNb=2
+Dma.Request2=SPI1_TX
+Dma.Request3=SPI1_RX
+Dma.RequestsNb=4
+Dma.SPI1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.3.EventEnable=DISABLE
+Dma.SPI1_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.3.Instance=DMA1_Stream3
+Dma.SPI1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.3.Mode=DMA_NORMAL
+Dma.SPI1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.3.RequestNumber=1
+Dma.SPI1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.3.SignalID=NONE
+Dma.SPI1_RX.3.SyncEnable=DISABLE
+Dma.SPI1_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.3.SyncRequestNumber=1
+Dma.SPI1_RX.3.SyncSignalID=NONE
+Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.2.EventEnable=DISABLE
+Dma.SPI1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.2.Instance=DMA1_Stream0
+Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.2.Mode=DMA_NORMAL
+Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.2.RequestNumber=1
+Dma.SPI1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.2.SignalID=NONE
+Dma.SPI1_TX.2.SyncEnable=DISABLE
+Dma.SPI1_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.2.SyncRequestNumber=1
+Dma.SPI1_TX.2.SyncSignalID=NONE
 FATFS.BSP.number=1
 FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_LFN_UNICODE,_FS_LOCK,_FS_EXFAT,_FS_NORTC,_NORTC_YEAR,USE_DMA_CODE_SD,_MAX_SS
 FATFS.USE_DMA_CODE_SD=1
@@ -287,24 +325,24 @@ Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PC13
-Mcu.Pin10=PB12
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin13=PB15
-Mcu.Pin14=PD11
-Mcu.Pin15=PD12
-Mcu.Pin16=PD13
-Mcu.Pin17=PD15
-Mcu.Pin18=PC8
-Mcu.Pin19=PC9
+Mcu.Pin10=PB10
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin15=PD11
+Mcu.Pin16=PD12
+Mcu.Pin17=PD13
+Mcu.Pin18=PD15
+Mcu.Pin19=PC8
 Mcu.Pin2=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13 (JTMS/SWDIO)
-Mcu.Pin25=PA14 (JTCK/SWCLK)
-Mcu.Pin26=PA15 (JTDI)
+Mcu.Pin20=PC9
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13 (JTMS/SWDIO)
+Mcu.Pin26=PA14 (JTCK/SWCLK)
 Mcu.Pin27=PC10
 Mcu.Pin28=PC11
 Mcu.Pin29=PC12
@@ -327,8 +365,8 @@ Mcu.Pin43=VP_STMicroelectronics.X-CUBE-DISPLAY_VS_BoardOoPartJjDISPLAY_3.0.0_3.0
 Mcu.Pin5=PH1-OSC_OUT (PH1)
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
-Mcu.Pin8=PB2
-Mcu.Pin9=PB10
+Mcu.Pin8=PA6
+Mcu.Pin9=PB2
 Mcu.PinsNb=44
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
@@ -418,18 +456,21 @@ MxDb.Version=DB.6.0.141
 NVIC.BDMA_Channel0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.BDMA_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MDMA_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.QUADSPI_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -454,16 +495,14 @@ PA14\ (JTCK/SWCLK).GPIOParameters=PinAttribute
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).PinAttribute=Free
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
-PA15\ (JTDI).GPIOParameters=PinAttribute
-PA15\ (JTDI).Mode=NSS_Signal_Hard_Output
-PA15\ (JTDI).PinAttribute=Free
-PA15\ (JTDI).Signal=SPI1_NSS
 PA4.GPIOParameters=PinAttribute
 PA4.PinAttribute=Free
 PA4.Signal=COMP_DAC11_group
 PA5.GPIOParameters=PinAttribute
 PA5.PinAttribute=Free
 PA5.Signal=COMP_DAC12_group
+PA6.Mode=Full_Duplex_Master
+PA6.Signal=SPI1_MISO
 PA9.GPIOParameters=PinAttribute
 PA9.Locked=true
 PA9.Mode=Asynchronous
@@ -474,7 +513,8 @@ PB10.Mode=Single Bank 1
 PB10.PinAttribute=Free
 PB10.Signal=QUADSPI_BK1_NCS
 PB12.Locked=true
-PB12.Signal=GPIO_Output
+PB12.Mode=NSS_Signal_Hard_Output
+PB12.Signal=SPI2_NSS
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
 PB14.Locked=true
@@ -491,7 +531,7 @@ PB2.PinAttribute=Free
 PB2.Signal=QUADSPI_CLK
 PB3\ (JTDO/TRACESWO).GPIOParameters=PinAttribute
 PB3\ (JTDO/TRACESWO).Locked=true
-PB3\ (JTDO/TRACESWO).Mode=TX_Only_Simplex_Unidirect_Master
+PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).PinAttribute=Free
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
 PB4\ (NJTRST).GPIOParameters=PinAttribute
@@ -500,7 +540,7 @@ PB4\ (NJTRST).PinAttribute=Free
 PB4\ (NJTRST).Signal=GPIO_Output
 PB5.GPIOParameters=PinAttribute
 PB5.Locked=true
-PB5.Mode=TX_Only_Simplex_Unidirect_Master
+PB5.Mode=Full_Duplex_Master
 PB5.PinAttribute=Free
 PB5.Signal=SPI1_MOSI
 PC10.GPIOParameters=PinAttribute
@@ -608,7 +648,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_SPI1_Init-SPI1-false-HAL-true,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_SPI1_Init-SPI1-false-HAL-true,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,15-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockMode=QSPI_CLOCK_MODE_0
 QUADSPI.ClockPrescaler=1
@@ -656,7 +696,6 @@ RCC.DIVR1Freq_Value=480000000
 RCC.DIVR2=4
 RCC.DIVR2Freq_Value=200000000
 RCC.DIVR3Freq_Value=260000000
-RCC.EnbaleCSS=true
 RCC.FDCANFreq_Value=120000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
@@ -667,7 +706,7 @@ RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=25000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,EnbaleCSS,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLL3_VCI_Range,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLL3_VCI_Range,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -725,18 +764,18 @@ SH.COMP_DAC12_group.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=52.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
-SPI1.Direction=SPI_DIRECTION_2LINES_TXONLY
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize,BaudRatePrescaler
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI2.CalculateBaudRate=52.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,NSSPMode
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,NSSPMode,VirtualNSS
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.NSSPMode=SPI_NSS_PULSE_ENABLE
+SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BSP.number=4
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=true
@@ -756,22 +795,22 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.api=BSP_BUS_DRIVER
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.component=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.condition=SEMDISPLAYCcBoardOoPartJjLCDJjILI9341JjSPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.instance=SPI2
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.instance=SPI1
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.ip=SPI
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.mode=Full-Duplex Master
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.name=LCD BUS IO driver
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.semaphore=
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=SPI2
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=SPI1
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.api=Unknown
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.component=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.condition=SEMDISPLAYCcBoardOoPartJjLCDJjILI9341JjSPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.instance=PB12
+STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.instance=PD3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.ip=GPIO
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.mode=Output
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.name=LCD CS Pin
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.semaphore=
-STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.solution=PB12
+STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.solution=PD3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.api=Unknown
 STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.component=
