--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -157,7 +157,9 @@ Dma.Request0=DAC1_CH1
 Dma.Request1=DAC1_CH2
 Dma.Request2=SPI1_TX
 Dma.Request3=SPI1_RX
-Dma.RequestsNb=4
+Dma.Request4=SPI2_TX
+Dma.Request5=SPI2_RX
+Dma.RequestsNb=6
 Dma.SPI1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI1_RX.3.EventEnable=DISABLE
 Dma.SPI1_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -194,6 +196,42 @@ Dma.SPI1_TX.2.SyncEnable=DISABLE
 Dma.SPI1_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.SPI1_TX.2.SyncRequestNumber=1
 Dma.SPI1_TX.2.SyncSignalID=NONE
+Dma.SPI2_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.5.EventEnable=DISABLE
+Dma.SPI2_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.5.Instance=DMA1_Stream5
+Dma.SPI2_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.5.Mode=DMA_NORMAL
+Dma.SPI2_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.5.RequestNumber=1
+Dma.SPI2_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_RX.5.SignalID=NONE
+Dma.SPI2_RX.5.SyncEnable=DISABLE
+Dma.SPI2_RX.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_RX.5.SyncRequestNumber=1
+Dma.SPI2_RX.5.SyncSignalID=NONE
+Dma.SPI2_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.4.EventEnable=DISABLE
+Dma.SPI2_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.4.Instance=DMA1_Stream4
+Dma.SPI2_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.4.Mode=DMA_NORMAL
+Dma.SPI2_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI2_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.4.RequestNumber=1
+Dma.SPI2_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI2_TX.4.SignalID=NONE
+Dma.SPI2_TX.4.SyncEnable=DISABLE
+Dma.SPI2_TX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI2_TX.4.SyncRequestNumber=1
+Dma.SPI2_TX.4.SyncSignalID=NONE
 FATFS.BSP.number=1
 FATFS.IPParameters=_USE_LFN,_CODE_PAGE,_LFN_UNICODE,_FS_LOCK,_FS_EXFAT,_FS_NORTC,_NORTC_YEAR,USE_DMA_CODE_SD,_MAX_SS
 FATFS.USE_DMA_CODE_SD=1
@@ -460,17 +498,20 @@ NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MDMA_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.QUADSPI_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -648,7 +689,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_SPI1_Init-SPI1-false-HAL-true,14-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,15-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,14-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockMode=QSPI_CLOCK_MODE_0
 QUADSPI.ClockPrescaler=1
@@ -696,6 +737,7 @@ RCC.DIVR1Freq_Value=480000000
 RCC.DIVR2=4
 RCC.DIVR2Freq_Value=200000000
 RCC.DIVR3Freq_Value=260000000
+RCC.EnbaleCSS=true
 RCC.FDCANFreq_Value=120000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
@@ -706,7 +748,7 @@ RCC.HRTIMFreq_Value=240000000
 RCC.HSE_VALUE=25000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLL3_VCI_Range,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3Freq_Value,EnbaleCSS,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL1_VCI_Range-AdvancedSettings,PLL2FRACN,PLL2_VCI_Range-AdvancedSettings,PLL3FRACN,PLL3_VCI_Range,PLLFRACN,PLLSourceVirtual,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMC1CLockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123CLockSelection,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
