GPIO 速度调到 `VeryHigh`

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -515,16 +515,19 @@ NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.GPIOParameters=PinAttribute
+PA10.GPIOParameters=GPIO_Speed,PinAttribute
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.PinAttribute=Free
 PA10.Signal=LPUART1_RX
-PA11.GPIOParameters=PinAttribute
+PA11.GPIOParameters=GPIO_Speed,PinAttribute
+PA11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11.Mode=Device_Only
 PA11.PinAttribute=Free
 PA11.Signal=USB_OTG_FS_DM
-PA12.GPIOParameters=PinAttribute
+PA12.GPIOParameters=GPIO_Speed,PinAttribute
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.Mode=Device_Only
 PA12.PinAttribute=Free
 PA12.Signal=USB_OTG_FS_DP
@@ -542,35 +545,48 @@ PA4.Signal=COMP_DAC11_group
 PA5.GPIOParameters=PinAttribute
 PA5.PinAttribute=Free
 PA5.Signal=COMP_DAC12_group
+PA6.GPIOParameters=GPIO_Speed
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA9.GPIOParameters=PinAttribute
+PA9.GPIOParameters=GPIO_Speed,PinAttribute
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.PinAttribute=Free
 PA9.Signal=LPUART1_TX
-PB10.GPIOParameters=PinAttribute
+PB10.GPIOParameters=GPIO_Speed,PinAttribute
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB10.Mode=Single Bank 1
 PB10.PinAttribute=Free
 PB10.Signal=QUADSPI_BK1_NCS
+PB12.GPIOParameters=GPIO_Speed
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB12.Locked=true
 PB12.Mode=NSS_Signal_Hard_Output
 PB12.Signal=SPI2_NSS
+PB13.GPIOParameters=GPIO_Speed
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Speed
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
-PB15.GPIOParameters=PinAttribute
+PB15.GPIOParameters=GPIO_Speed,PinAttribute
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.PinAttribute=Free
 PB15.Signal=SPI2_MOSI
-PB2.GPIOParameters=PinAttribute
+PB2.GPIOParameters=GPIO_Speed,PinAttribute
+PB2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB2.Mode=Single Bank 1
 PB2.PinAttribute=Free
 PB2.Signal=QUADSPI_CLK
-PB3\ (JTDO/TRACESWO).GPIOParameters=PinAttribute
+PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Speed,PinAttribute
+PB3\ (JTDO/TRACESWO).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).PinAttribute=Free
@@ -579,7 +595,8 @@ PB4\ (NJTRST).GPIOParameters=PinAttribute
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).PinAttribute=Free
 PB4\ (NJTRST).Signal=GPIO_Output
-PB5.GPIOParameters=PinAttribute
+PB5.GPIOParameters=GPIO_Speed,PinAttribute
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.PinAttribute=Free
@@ -616,15 +633,18 @@ PC9.GPIOParameters=PinAttribute
 PC9.Mode=SD_4_bits_Wide_bus
 PC9.PinAttribute=Free
 PC9.Signal=SDMMC1_D1
-PD11.GPIOParameters=PinAttribute
+PD11.GPIOParameters=GPIO_Speed,PinAttribute
+PD11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD11.Mode=Single Bank 1
 PD11.PinAttribute=Free
 PD11.Signal=QUADSPI_BK1_IO0
-PD12.GPIOParameters=PinAttribute
+PD12.GPIOParameters=GPIO_Speed,PinAttribute
+PD12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD12.Mode=Single Bank 1
 PD12.PinAttribute=Free
 PD12.Signal=QUADSPI_BK1_IO1
-PD13.GPIOParameters=PinAttribute
+PD13.GPIOParameters=GPIO_Speed,PinAttribute
+PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD13.Locked=true
 PD13.Mode=Single Bank 1
 PD13.PinAttribute=Free
@@ -645,7 +665,8 @@ PD4.GPIOParameters=PinAttribute
 PD4.Locked=true
 PD4.PinAttribute=Free
 PD4.Signal=GPIO_Output
-PE2.GPIOParameters=PinAttribute
+PE2.GPIOParameters=GPIO_Speed,PinAttribute
+PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE2.Mode=Single Bank 1
 PE2.PinAttribute=Free
 PE2.Signal=QUADSPI_BK1_IO2
@@ -822,7 +843,8 @@ SPI2.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BSP.number=4
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcBoardOoPartJjLCDJjILI9341=SPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=DISPLAYCcBoardOoPartJjLCDJjILI9341
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=DISPLAYCcBoardOoPartJjLCDJjILI9341,p_oswrapper
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_oswrapper=NoOS
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.api=Unknown
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.component=
