--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -35,43 +35,7 @@ Bdma.LPUART1_TX.0.SyncRequestNumber=1
 Bdma.LPUART1_TX.0.SyncSignalID=NONE
 Bdma.Request0=LPUART1_TX
 Bdma.Request1=LPUART1_RX
-Bdma.Request2=SPI6_TX
-Bdma.Request3=SPI6_RX
-Bdma.RequestsNb=4
-Bdma.SPI6_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Bdma.SPI6_RX.3.EventEnable=DISABLE
-Bdma.SPI6_RX.3.Instance=BDMA_Channel3
-Bdma.SPI6_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Bdma.SPI6_RX.3.MemInc=DMA_MINC_ENABLE
-Bdma.SPI6_RX.3.Mode=DMA_NORMAL
-Bdma.SPI6_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Bdma.SPI6_RX.3.PeriphInc=DMA_PINC_DISABLE
-Bdma.SPI6_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Bdma.SPI6_RX.3.Priority=DMA_PRIORITY_LOW
-Bdma.SPI6_RX.3.RequestNumber=1
-Bdma.SPI6_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Bdma.SPI6_RX.3.SignalID=NONE
-Bdma.SPI6_RX.3.SyncEnable=DISABLE
-Bdma.SPI6_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Bdma.SPI6_RX.3.SyncRequestNumber=1
-Bdma.SPI6_RX.3.SyncSignalID=NONE
-Bdma.SPI6_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Bdma.SPI6_TX.2.EventEnable=DISABLE
-Bdma.SPI6_TX.2.Instance=BDMA_Channel2
-Bdma.SPI6_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Bdma.SPI6_TX.2.MemInc=DMA_MINC_ENABLE
-Bdma.SPI6_TX.2.Mode=DMA_NORMAL
-Bdma.SPI6_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Bdma.SPI6_TX.2.PeriphInc=DMA_PINC_DISABLE
-Bdma.SPI6_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Bdma.SPI6_TX.2.Priority=DMA_PRIORITY_LOW
-Bdma.SPI6_TX.2.RequestNumber=1
-Bdma.SPI6_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Bdma.SPI6_TX.2.SignalID=NONE
-Bdma.SPI6_TX.2.SyncEnable=DISABLE
-Bdma.SPI6_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Bdma.SPI6_TX.2.SyncRequestNumber=1
-Bdma.SPI6_TX.2.SyncSignalID=NONE
+Bdma.RequestsNb=2
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
@@ -172,11 +136,49 @@ Dma.DAC1_CH1.0.SyncSignalID=NONE
 Dma.Request0=DAC1_CH1
 Dma.Request1=SPI2_TX
 Dma.Request2=SPI2_RX
-Dma.RequestsNb=3
+Dma.Request3=SPI1_TX
+Dma.Request4=SPI1_RX
+Dma.RequestsNb=5
+Dma.SPI1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.4.EventEnable=DISABLE
+Dma.SPI1_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.4.Instance=DMA1_Stream1
+Dma.SPI1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.4.Mode=DMA_NORMAL
+Dma.SPI1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.4.RequestNumber=1
+Dma.SPI1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.4.SignalID=NONE
+Dma.SPI1_RX.4.SyncEnable=DISABLE
+Dma.SPI1_RX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.4.SyncRequestNumber=1
+Dma.SPI1_RX.4.SyncSignalID=NONE
+Dma.SPI1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.3.EventEnable=DISABLE
+Dma.SPI1_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.3.Instance=DMA1_Stream0
+Dma.SPI1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.3.Mode=DMA_NORMAL
+Dma.SPI1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.3.RequestNumber=1
+Dma.SPI1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.3.SignalID=NONE
+Dma.SPI1_TX.3.SyncEnable=DISABLE
+Dma.SPI1_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.3.SyncRequestNumber=1
+Dma.SPI1_TX.3.SyncSignalID=NONE
 Dma.SPI2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.2.EventEnable=DISABLE
 Dma.SPI2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_RX.2.Instance=DMA1_Stream1
+Dma.SPI2_RX.2.Instance=DMA1_Stream3
 Dma.SPI2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI2_RX.2.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_RX.2.Mode=DMA_NORMAL
@@ -194,7 +196,7 @@ Dma.SPI2_RX.2.SyncSignalID=NONE
 Dma.SPI2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI2_TX.1.EventEnable=DISABLE
 Dma.SPI2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_TX.1.Instance=DMA1_Stream0
+Dma.SPI2_TX.1.Instance=DMA1_Stream2
 Dma.SPI2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.SPI2_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.SPI2_TX.1.Mode=DMA_NORMAL
@@ -321,8 +323,8 @@ Mcu.IP10=NVIC
 Mcu.IP11=QUADSPI
 Mcu.IP12=RCC
 Mcu.IP13=SDMMC1
-Mcu.IP14=SPI2
-Mcu.IP15=SPI6
+Mcu.IP14=SPI1
+Mcu.IP15=SPI2
 Mcu.IP16=SYS
 Mcu.IP17=TIM6
 Mcu.IP18=USB_DEVICE
@@ -469,11 +471,11 @@ MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
 NVIC.BDMA_Channel0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.BDMA_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.BDMA_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.BDMA_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -485,8 +487,8 @@ NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.QUADSPI_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.SPI6_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -519,8 +521,9 @@ PA4.PinAttribute=Free
 PA4.Signal=COMP_DAC11_group
 PA6.GPIOParameters=GPIO_Speed
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI6_MISO
+PA6.Signal=SPI1_MISO
 PA9.GPIOParameters=GPIO_Speed,PinAttribute
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA9.Locked=true
@@ -562,8 +565,9 @@ PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Speed
 PB3\ (JTDO/TRACESWO).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
-PB3\ (JTDO/TRACESWO).Signal=SPI6_SCK
-PB4\ (NJTRST).GPIOParameters=PinAttribute
+PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
+PB4\ (NJTRST).GPIOParameters=GPIO_Speed,PinAttribute
+PB4\ (NJTRST).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).PinAttribute=Free
 PB4\ (NJTRST).Signal=GPIO_Output
@@ -571,7 +575,7 @@ PB5.GPIOParameters=GPIO_Speed
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
-PB5.Signal=SPI6_MOSI
+PB5.Signal=SPI1_MOSI
 PC10.GPIOParameters=PinAttribute
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.PinAttribute=Free
@@ -628,11 +632,13 @@ PD2.GPIOParameters=PinAttribute
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.PinAttribute=Free
 PD2.Signal=SDMMC1_CMD
-PD3.GPIOParameters=PinAttribute
+PD3.GPIOParameters=GPIO_Speed,PinAttribute
+PD3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD3.Locked=true
 PD3.PinAttribute=Free
 PD3.Signal=GPIO_Output
-PD4.GPIOParameters=PinAttribute
+PD4.GPIOParameters=GPIO_Speed,PinAttribute
+PD4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD4.Locked=true
 PD4.PinAttribute=Free
 PD4.Signal=GPIO_Output
@@ -681,7 +687,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,14-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockMode=QSPI_CLOCK_MODE_0
 QUADSPI.ClockPrescaler=1
@@ -689,7 +695,7 @@ QUADSPI.FifoThreshold=4
 QUADSPI.FlashSize=22
 QUADSPI.IPParameters=ClockPrescaler,FifoThreshold,SampleShifting,FlashSize,ClockMode,ChipSelectHighTime
 QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
-RCC.ADCFreq_Value=200000000
+RCC.ADCFreq_Value=160000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
 RCC.APB1Freq_Value=120000000
@@ -715,14 +721,14 @@ RCC.DIVN1=384
 RCC.DIVN2=160
 RCC.DIVN3=125
 RCC.DIVP1Freq_Value=480000000
-RCC.DIVP2=4
-RCC.DIVP2Freq_Value=200000000
+RCC.DIVP2=5
+RCC.DIVP2Freq_Value=160000000
 RCC.DIVP3=5
 RCC.DIVP3Freq_Value=125000000
 RCC.DIVQ1=4
 RCC.DIVQ1Freq_Value=240000000
-RCC.DIVQ2=10
-RCC.DIVQ2Freq_Value=80000000
+RCC.DIVQ2=4
+RCC.DIVQ2Freq_Value=200000000
 RCC.DIVQ3=5
 RCC.DIVQ3Freq_Value=125000000
 RCC.DIVR1Freq_Value=480000000
@@ -768,10 +774,10 @@ RCC.SDMMC1CLockSelection=RCC_SDMMCCLKSOURCE_PLL2
 RCC.SDMMCFreq_Value=200000000
 RCC.SPDIFRXFreq_Value=240000000
 RCC.SPI123CLockSelection=RCC_SPI123CLKSOURCE_PLL2
-RCC.SPI123Freq_Value=200000000
+RCC.SPI123Freq_Value=160000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6CLockSelection=RCC_SPI6CLKSOURCE_PLL2
-RCC.SPI6Freq_Value=80000000
+RCC.SPI6Freq_Value=200000000
 RCC.SWPMI1Freq_Value=120000000
 RCC.SYSCLKFreq_VALUE=480000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -795,18 +801,19 @@ SDMMC1.IPParameters=ClockPowerSave,HardwareFlowControl,TransceiverPresent,ClockD
 SDMMC1.TransceiverPresent=SDMMC_TRANSCEIVER_PRESENT
 SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
 SH.COMP_DAC11_group.ConfNb=1
-SPI2.CalculateBaudRate=100.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=40.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=80.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
-SPI6.CalculateBaudRate=40.0 MBits/s
-SPI6.DataSize=SPI_DATASIZE_8BIT
-SPI6.Direction=SPI_DIRECTION_2LINES
-SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
-SPI6.Mode=SPI_MODE_MASTER
-SPI6.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BSP.number=4
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.DISPLAYCcBoardOoPartJjLCDJjILI9341=SPI
@@ -826,12 +833,12 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.api=BSP_BUS_DRIVER
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.component=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.condition=SEMDISPLAYCcBoardOoPartJjLCDJjILI9341JjSPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.instance=SPI6
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.instance=SPI1
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.ip=SPI
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.mode=Full-Duplex Master
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.name=LCD BUS IO driver
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.semaphore=
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=SPI6
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=SPI1
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.api=Unknown
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.component=
