给特定 GPIO 起名。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -566,7 +566,8 @@ PB3\ (JTDO/TRACESWO).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).Signal=SPI1_SCK
-PB4\ (NJTRST).GPIOParameters=GPIO_Speed,PinAttribute
+PB4\ (NJTRST).GPIOParameters=GPIO_Speed,GPIO_Label,PinAttribute
+PB4\ (NJTRST).GPIO_Label=LCD_DC
 PB4\ (NJTRST).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).PinAttribute=Free
@@ -588,7 +589,9 @@ PC12.GPIOParameters=PinAttribute
 PC12.Mode=SD_4_bits_Wide_bus
 PC12.PinAttribute=Free
 PC12.Signal=SDMMC1_CK
-PC13.GPIOParameters=PinAttribute
+PC13.GPIOParameters=GPIO_PuPd,GPIO_Label,PinAttribute
+PC13.GPIO_Label=BUTTON-USER
+PC13.GPIO_PuPd=GPIO_PULLDOWN
 PC13.Locked=true
 PC13.PinAttribute=Free
 PC13.Signal=GPIO_Input
@@ -624,7 +627,9 @@ PD13.Locked=true
 PD13.Mode=Single Bank 1
 PD13.PinAttribute=Free
 PD13.Signal=QUADSPI_BK1_IO3
-PD15.GPIOParameters=PinAttribute
+PD15.GPIOParameters=GPIO_PuPd,GPIO_Label,PinAttribute
+PD15.GPIO_Label=SDMMC1_DETECT
+PD15.GPIO_PuPd=GPIO_PULLDOWN
 PD15.Locked=true
 PD15.PinAttribute=Free
 PD15.Signal=GPIO_Input
@@ -632,12 +637,14 @@ PD2.GPIOParameters=PinAttribute
 PD2.Mode=SD_4_bits_Wide_bus
 PD2.PinAttribute=Free
 PD2.Signal=SDMMC1_CMD
-PD3.GPIOParameters=GPIO_Speed,PinAttribute
+PD3.GPIOParameters=GPIO_Speed,GPIO_Label,PinAttribute
+PD3.GPIO_Label=LCD_CS
 PD3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD3.Locked=true
 PD3.PinAttribute=Free
 PD3.Signal=GPIO_Output
-PD4.GPIOParameters=GPIO_Speed,PinAttribute
+PD4.GPIOParameters=GPIO_Speed,GPIO_Label,PinAttribute
+PD4.GPIO_Label=LCD_RST
 PD4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD4.Locked=true
 PD4.PinAttribute=Free
@@ -687,7 +694,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,14-MX_SPI2_Init-SPI2-false-HAL-true,15-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_BDMA_Init-BDMA-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_JPEG_Init-JPEG-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_FATFS_Init-FATFS-false-HAL-false,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_QUADSPI_Init-QUADSPI-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,14-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockMode=QSPI_CLOCK_MODE_0
 QUADSPI.ClockPrescaler=1
