确保 MPU 覆盖 AHB SRAM 的时候，三块 AHB SRAM 都覆盖到。

--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -96,7 +96,7 @@ CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_SIZ
 CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_SIZE_128KB
 CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_SIZE_128KB
 CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region4_Settings_S=MPU_REGION_SIZE_512KB
-CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_REGION_SIZE_64KB
+CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region5_Settings_S=MPU_REGION_SIZE_512KB
 CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region6_Settings_S=MPU_REGION_SIZE_64KB
 CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region7_Settings_S=MPU_REGION_SIZE_256MB
 CORTEX_M7.Size_Spec=MPU_REGION_SIZE_4GB
@@ -518,7 +518,8 @@ PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA4.GPIOParameters=PinAttribute
 PA4.PinAttribute=Free
 PA4.Signal=COMP_DAC11_group
-PA6.GPIOParameters=GPIO_Speed
+PA6.GPIOParameters=GPIO_Speed,GPIO_Label
+PA6.GPIO_Label=LCD_SDO
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
@@ -560,7 +561,8 @@ PB2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB2.Mode=Single Bank 1
 PB2.PinAttribute=Free
 PB2.Signal=QUADSPI_CLK
-PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Speed
+PB3\ (JTDO/TRACESWO).GPIOParameters=GPIO_Speed,GPIO_Label
+PB3\ (JTDO/TRACESWO).GPIO_Label=LCD_SCK
 PB3\ (JTDO/TRACESWO).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
@@ -571,7 +573,8 @@ PB4\ (NJTRST).GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).PinAttribute=Free
 PB4\ (NJTRST).Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Speed
+PB5.GPIOParameters=GPIO_Speed,GPIO_Label
+PB5.GPIO_Label=LCD_SDI
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
@@ -811,7 +814,7 @@ SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=40.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.CalculateBaudRate=80.0 MBits/s
@@ -820,7 +823,7 @@ SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
-STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BSP.number=4
+STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BSP.number=3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.BoardOoPartJjDISPLAY_Checked=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.IPParameters=p_oswrapper
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0.p_oswrapper=NoOS
@@ -835,35 +838,25 @@ STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.name=LCD RESET Pin
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.semaphore=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.00.BSP.solution=PD4
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.STBoard=false
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.api=BSP_BUS_DRIVER
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.api=Unknown
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.component=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.condition=SEMDISPLAYCcBoardOoPartJjLCDJjILI9341JjSPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.instance=SPI1
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.ip=SPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.mode=Full-Duplex Master
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.name=LCD BUS IO driver
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.instance=PD3
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.ip=GPIO
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.mode=Output
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.name=LCD CS Pin
 STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.semaphore=
-STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=SPI1
+STMicroelectronics.X-CUBE-DISPLAY.3.0.01.BSP.solution=PD3
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.STBoard=false
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.api=Unknown
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.component=
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.condition=SEMDISPLAYCcBoardOoPartJjLCDJjILI9341JjSPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.instance=PD3
+STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.instance=PB4 (NJTRST)
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.ip=GPIO
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.mode=Output
-STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.name=LCD CS Pin
+STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.name=LCD DCX Pin
 STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.semaphore=
-STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.solution=PD3
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.STBoard=false
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.api=Unknown
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.component=
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.condition=SEMDISPLAYCcBoardOoPartJjLCDJjILI9341JjSPI
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.instance=PB4 (NJTRST)
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.ip=GPIO
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.mode=Output
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.name=LCD DCX Pin
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.semaphore=
-STMicroelectronics.X-CUBE-DISPLAY.3.0.03.BSP.solution=PB4 (NJTRST)
+STMicroelectronics.X-CUBE-DISPLAY.3.0.02.BSP.solution=PB4 (NJTRST)
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-DISPLAY.3.0.0_SwParameter=DISPLAYCcBoardOoPartJjLCDJjILI9341\:SPI;
 TIM6.IPParameters=Period,Prescaler,TIM_MasterOutputTrigger
