--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -279,63 +279,64 @@ Mcu.IPNb=18
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
-Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PA3
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PB0
-Mcu.Pin16=PB1
-Mcu.Pin17=PB2
-Mcu.Pin18=PE9
-Mcu.Pin19=PE10
-Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PE11
-Mcu.Pin21=PE12
-Mcu.Pin22=PE13
-Mcu.Pin23=PE14
-Mcu.Pin24=PE15
-Mcu.Pin25=PB10
-Mcu.Pin26=PB11
-Mcu.Pin27=PB12
-Mcu.Pin28=PB13
-Mcu.Pin29=PB14
-Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PB15
-Mcu.Pin31=PD11
-Mcu.Pin32=PD12
-Mcu.Pin33=PD15
-Mcu.Pin34=PC8
-Mcu.Pin35=PC9
-Mcu.Pin36=PA9
-Mcu.Pin37=PA11
-Mcu.Pin38=PA13 (JTMS/SWDIO)
-Mcu.Pin39=PA14 (JTCK/SWCLK)
-Mcu.Pin4=PH1-OSC_OUT (PH1)
-Mcu.Pin40=PC10
-Mcu.Pin41=PC11
-Mcu.Pin42=PC12
-Mcu.Pin43=PD2
-Mcu.Pin44=PD3
-Mcu.Pin45=PD4
-Mcu.Pin46=PB3 (JTDO/TRACESWO)
-Mcu.Pin47=PB4 (NJTRST)
-Mcu.Pin48=PB5
-Mcu.Pin49=PB6
-Mcu.Pin5=PC0
-Mcu.Pin50=PB8
-Mcu.Pin51=VP_FATFS_VS_SDIO
-Mcu.Pin52=VP_JPEG_VS_JPEG
-Mcu.Pin53=VP_SYS_VS_Systick
-Mcu.Pin54=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin55=VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS
-Mcu.Pin56=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2_C
-Mcu.Pin8=PC3_C
-Mcu.Pin9=PA1
-Mcu.PinsNb=57
+Mcu.Pin1=PC13
+Mcu.Pin10=PA1
+Mcu.Pin11=PA3
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PB0
+Mcu.Pin17=PB1
+Mcu.Pin18=PB2
+Mcu.Pin19=PE9
+Mcu.Pin2=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin20=PE10
+Mcu.Pin21=PE11
+Mcu.Pin22=PE12
+Mcu.Pin23=PE13
+Mcu.Pin24=PE14
+Mcu.Pin25=PE15
+Mcu.Pin26=PB10
+Mcu.Pin27=PB11
+Mcu.Pin28=PB12
+Mcu.Pin29=PB13
+Mcu.Pin3=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin30=PB14
+Mcu.Pin31=PB15
+Mcu.Pin32=PD11
+Mcu.Pin33=PD12
+Mcu.Pin34=PD15
+Mcu.Pin35=PC8
+Mcu.Pin36=PC9
+Mcu.Pin37=PA9
+Mcu.Pin38=PA11
+Mcu.Pin39=PA13 (JTMS/SWDIO)
+Mcu.Pin4=PH0-OSC_IN (PH0)
+Mcu.Pin40=PA14 (JTCK/SWCLK)
+Mcu.Pin41=PC10
+Mcu.Pin42=PC11
+Mcu.Pin43=PC12
+Mcu.Pin44=PD2
+Mcu.Pin45=PD3
+Mcu.Pin46=PD4
+Mcu.Pin47=PB3 (JTDO/TRACESWO)
+Mcu.Pin48=PB4 (NJTRST)
+Mcu.Pin49=PB5
+Mcu.Pin5=PH1-OSC_OUT (PH1)
+Mcu.Pin50=PB6
+Mcu.Pin51=PB8
+Mcu.Pin52=VP_FATFS_VS_SDIO
+Mcu.Pin53=VP_JPEG_VS_JPEG
+Mcu.Pin54=VP_SYS_VS_Systick
+Mcu.Pin55=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin56=VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS
+Mcu.Pin57=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin6=PC0
+Mcu.Pin7=PC1
+Mcu.Pin8=PC2_C
+Mcu.Pin9=PC3_C
+Mcu.PinsNb=58
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-DISPLAY.3.0.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -412,6 +413,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PA1.GPIO_PuPd=GPIO_PULLUP
@@ -540,6 +542,10 @@ PC12.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_VERY_HIGH
 PC12.Mode=SD_4_bits_Wide_bus_auto_dir_voltage_converter
 PC12.PinAttribute=Free
 PC12.Signal=SDMMC1_CK
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=LCD_PWCTRL
+PC13.Locked=true
+PC13.Signal=GPIO_Output
 PC14-OSC32_IN\ (OSC32_IN).GPIOParameters=PinAttribute
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).PinAttribute=Free
