--- a/retro-tv-2.0.ioc
+++ b/retro-tv-2.0.ioc
@@ -650,7 +650,7 @@ PE2.Signal=QUADSPI_BK1_IO2
 PE9.GPIOParameters=PinState,GPIO_Label
 PE9.GPIO_Label=PWCTRL
 PE9.Locked=true
-PE9.PinState=GPIO_PIN_SET
+PE9.PinState=GPIO_PIN_RESET
 PE9.Signal=GPIO_Output
 PH0-OSC_IN\ (PH0).GPIOParameters=PinAttribute
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
@@ -692,7 +692,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_JPEG_Init-JPEG-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,8-MX_FATFS_Init-FATFS-false-HAL-false,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_I2S2_Init-I2S2-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,13-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,6-MX_JPEG_Init-JPEG-false-HAL-true,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_I2S2_Init-I2S2-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,12-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
 QUADSPI.ClockPrescaler=0
 QUADSPI.FifoThreshold=4
